# frappe_docker

./: JALALI_SETUP.md  JALALI_SETUP_FA.md  custom_erpnext.Dockerfile  docker-compose-jalali.yml  setup-jalali.sh
jalali_shamsi_datepicker/: pyproject.toml
jalali_shamsi_datepicker/jalali_shamsi_datepicker/: hooks.py  utils.py
jalali_shamsi_datepicker/jalali_shamsi_datepicker/fixtures/: custom_field.json
jalali_shamsi_datepicker/jalali_shamsi_datepicker/public/js/: togregorian_date.js
